First draft for sketchybar

--- a/dot_aerospace.toml.tmpl
+++ b/dot_aerospace.toml.tmpl
@@ -38,6 +38,10 @@ default-root-container-orientation = 'auto'
 # Fallback value (if you omit the key): on-focused-monitor-changed = []
 on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 
+exec-on-workspace-change = [ '/bin/bash/', '-c',
+    'sketchybar --trigger aerospace_workspace_changed FOCUSED=$AEROSPACE_FOCUSED_WORKSPACE'
+]
+
 # You can effectively turn off macOS "Hide application" (cmd-h) feature by toggling this flag
 # Useful if you don't use this macOS feature, but accidentally hit cmd-h or cmd-alt-h key
 # Also see: https://nikitabobko.github.io/AeroSpace/goodies#disable-hide-app
@@ -75,7 +79,7 @@ on-mode-changed = []
     inner.vertical =   5
     outer.left =       5
     outer.bottom =     5
-    outer.top =        5
+    outer.top =        50
     outer.right =      5
 
 # 'main' binding mode declaration
@@ -196,4 +200,3 @@ on-mode-changed = []
     alt-shift-down = ['join-with down', 'mode main']
     alt-shift-up = ['join-with up', 'mode main']
     alt-shift-right = ['join-with right', 'mode main']
-
