--- a/run_onchange_before_install-packages.sh.tmpl
+++ b/run_onchange_before_install-packages.sh.tmpl
@@ -3,12 +3,16 @@
 
 brew bundle --file=/dev/stdin <<EOF
 
+tap "FelixKratz/formulae"
+
 brew "direnv"
 brew "fx"
+brew "FelixKratz/formulae/sketchybar"
 
 cask "nikitabobko/tap/aerospace"
 cask "font-fira-code"
 cask "raycast"
+cask "sf-symbols"
 cask "visual-studio-code"
 
 EOF
