--- a/dot_aerospace.toml.tmpl
+++ b/dot_aerospace.toml.tmpl
@@ -9,7 +9,7 @@ config-version = 2
 
 # You can use it to add commands that run after AeroSpace startup.
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
-after-startup-command = ['exec-and-forget sketchybar']
+after-startup-command = []
 
 # Start AeroSpace at login
 start-at-login = true
@@ -37,10 +37,6 @@ default-root-container-orientation = 'auto'
 # See https://nikitabobko.github.io/AeroSpace/commands#move-mouse
 # Fallback value (if you omit the key): on-focused-monitor-changed = []
 on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
-
-exec-on-workspace-change = [ '/bin/bash/', '-c',
-    'sketchybar --trigger aerospace_workspace_changed FOCUSED=$AEROSPACE_FOCUSED_WORKSPACE'
-]
 
 # You can effectively turn off macOS "Hide application" (cmd-h) feature by toggling this flag
 # Useful if you don't use this macOS feature, but accidentally hit cmd-h or cmd-alt-h key
@@ -79,7 +75,7 @@ on-mode-changed = []
     inner.vertical =   5
     outer.left =       5
     outer.bottom =     5
-    outer.top =        [{ monitor."built-in" = 5 }, 35]
+    outer.top =        5
     outer.right =      5
 
 # 'main' binding mode declaration
