switch to new workspace after window move

--- a/dot_aerospace.toml.tmpl
+++ b/dot_aerospace.toml.tmpl
@@ -47,7 +47,7 @@ automatically-unhide-macos-hidden-apps = false
 # even when they are invisible.
 # This config version is only available since 'config-version = 2'
 # Fallback value (if you omit the key): persistent-workspaces = []
-persistent-workspaces = ["1", "B", "C", "M", "N", "S"]
+persistent-workspaces = []
 
 # A callback that runs every time binding mode changes
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -157,21 +157,21 @@ on-mode-changed = []
     {{ $hyper }}-t = 'workspace T'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-    {{ $hyper }}-shift-1 = 'move-node-to-workspace 1'
-    {{ $hyper }}-shift-2 = 'move-node-to-workspace 2'
-    {{ $hyper }}-shift-3 = 'move-node-to-workspace 3'
-    {{ $hyper }}-shift-4 = 'move-node-to-workspace 4'
-    {{ $hyper }}-shift-5 = 'move-node-to-workspace 5'
-    {{ $hyper }}-shift-6 = 'move-node-to-workspace 6'
-    {{ $hyper }}-shift-7 = 'move-node-to-workspace 7'
-    {{ $hyper }}-shift-8 = 'move-node-to-workspace 8'
-    {{ $hyper }}-shift-9 = 'move-node-to-workspace 9'
-    {{ $hyper }}-shift-b = 'move-node-to-workspace B'
-    {{ $hyper }}-shift-c = 'move-node-to-workspace C'
-    {{ $hyper }}-shift-m = 'move-node-to-workspace M'
-    {{ $hyper }}-shift-n = 'move-node-to-workspace N'
-    {{ $hyper }}-shift-s = 'move-node-to-workspace S'
-    {{ $hyper }}-shift-t = 'move-node-to-workspace T'
+    {{ $hyper }}-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
+    {{ $hyper }}-shift-2 = ['move-node-to-workspace 2', 'workspace 2']
+    {{ $hyper }}-shift-3 = ['move-node-to-workspace 3', 'workspace 3']
+    {{ $hyper }}-shift-4 = ['move-node-to-workspace 4', 'workspace 4']
+    {{ $hyper }}-shift-5 = ['move-node-to-workspace 5', 'workspace 5']
+    {{ $hyper }}-shift-6 = ['move-node-to-workspace 6', 'workspace 6']
+    {{ $hyper }}-shift-7 = ['move-node-to-workspace 7', 'workspace 7']
+    {{ $hyper }}-shift-8 = ['move-node-to-workspace 8', 'workspace 8']
+    {{ $hyper }}-shift-9 = ['move-node-to-workspace 9', 'workspace 9']
+    {{ $hyper }}-shift-b = ['move-node-to-workspace B', 'workspace B']
+    {{ $hyper }}-shift-c = ['move-node-to-workspace C', 'workspace C']
+    {{ $hyper }}-shift-m = ['move-node-to-workspace M', 'workspace M']
+    {{ $hyper }}-shift-n = ['move-node-to-workspace N', 'workspace N']
+    {{ $hyper }}-shift-s = ['move-node-to-workspace S', 'workspace S']
+    {{ $hyper }}-shift-t = ['move-node-to-workspace T', 'workspace T']
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
     {{ $hyper }}-tab = 'workspace-back-and-forth'
