add ghostty and tmux

--- a/run_onchange_before_install-packages.sh.tmpl
+++ b/run_onchange_before_install-packages.sh.tmpl
@@ -5,7 +5,9 @@ brew bundle --file=/dev/stdin <<EOF
 
 brew "direnv"
 brew "fx"
+brew "tmux"
 
+cask "ghostty"
 cask "nikitabobko/tap/aerospace"
 cask "font-fira-code"
 cask "raycast"
