changed font to FiraCode Nerd Font

--- a/run_onchange_before_install-packages.sh.tmpl
+++ b/run_onchange_before_install-packages.sh.tmpl
@@ -9,7 +9,7 @@ brew "tmux"
 
 cask "ghostty"
 cask "nikitabobko/tap/aerospace"
-cask "font-fira-code"
+cask "font-fira-code-nerd-font"
 cask "raycast"
 cask "visual-studio-code"
 
